--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ If you need extra help, you can contact our support team, or visit the Shopify E
         <a href="https://www.shopify.com/legal/privacy">Privacy policy</a>
         <a href="https://www.shopify.com/sitemap">Sitemap</a>
     </div>
-    <h6>Clone by <a href="https://github.com/OjayII">Ojay.</a></h6>
+    <h6>Clone by Ojay.</h6>
     <script src="shopify.js"></script>
    </div>
    <div id="deskmsg" class="nonemobile">
