--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ If you need extra help, you can contact our support team, or visit the Shopify E
    </div>
    <div id="deskmsg" class="nonemobile">
        <img src="images/flat-engineering-construction-illustrated_23-2148892788.jpg" alt="">
-       <h2>Desktop version still under construction. </h2>
+       <h2>Desktop version still under construction. 🥲</h2>
        <h6>Image by <a href="https://www.freepik.com/free-vector/flat-engineering-construction-illustrated_13107137.htm#query=construction%20illustration&position=0&from_view=keyword&track=ais">Freepik</a></h6>
    </div>
 
